--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ html {height: 100%;
       width: 100%; }
 
 body  {
-  font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-family: 'Comic Sans MS', sans-serif;
 }
   
