--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 html {height: 100%;
       width: 100%; }
 
-body  {
-  font-family: 'Comic Sans MS';
-}
+body {
+            font-family: 'Comic Neue', sans-serif;
+        }
+        h1 {
+            font-family: 'Comic Neue', sans-serif;
+        }
+        p {
+            font-family: 'Comic Neue', sans-serif;
+        }
   
