--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 html {height: 100%;
       width: 100%; }
 
-body {
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
             font-family: 'Comic Neue', sans-serif;
         }
-        h1 {
-            font-family: 'Comic Neue', sans-serif;
-        }
-        p {
-            font-family: 'Comic Neue', sans-serif;
-        }
+    </style>
+</head>
+
   
