--- a/style.css
+++ b/style.css
@@ -5,4 +5,27 @@ body {
     font-family: 'Comic Neue', sans-serif;
 }
 
+h1 {
+    font-family: 'Comic Neue', sans-serif;
+}
+
+p {
+    font-family: 'Comic Neue', sans-serif;
+}
   
+h2 {
+    font-family: 'Comic Neue', sans-serif;
+}
+
+h3 {
+    font-family: 'Comic Neue', sans-serif;
+}
+
+h4 {
+    font-family: 'Comic Neue', sans-serif;
+}
+
+h5 {
+    font-family: 'Comic Neue', sans-serif;
+}
+
